add User auth
